# env_edge_gateway_rpi

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  MQTT.md  QUICKSTART_MQTT.md  README.md  docker-compose.yml  install_mosquitto.sh  test_gateway.sh  test_mqtt.sh
src/: app.rs  config.rs  database.rs  error.rs  main.rs  models.rs
src/handlers/: health.rs  metrics.rs  mod.rs  query.rs  sensor.rs
src/services/: cloud_sync.rs  edge_processor.rs  mod.rs  mqtt_handler.rs
src/startup/: logger.rs  mod.rs  router.rs  state.rs
