[package]
name = "env_edge_gateway_rpi"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Logging And Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Local Database (SQLite for edge)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP Client for sending to main service
reqwest = { version = "0.12.24", features = ["json"] }

# Utils
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"

# Configuration
config = "0.15.18"
dotenv = "0.15.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Async Trait Support
async-trait = "0.1.89"